Fix whitespace handling in auth forms

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <script>
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const username = event.target.username.value;
-            const password = event.target.password.value;
+            const username = event.target.username.value.trim();
+            const password = event.target.password.value.trim();
 
             if (!username || !password) {
                 alert('Please enter both username and password.');
