--- a/signup.html
+++ b/signup.html
@@ -31,9 +31,9 @@
     <script>
         document.getElementById('signupForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const username = event.target.username.value;
-            const password = event.target.password.value;
-            const email = event.target.email.value;
+            const username = event.target.username.value.trim();
+            const password = event.target.password.value.trim();
+            const email = event.target.email.value.trim();
 
             // Basic validation (can be more extensive)
             if (!username || !password || !email) {
